fixed Spacing issue #55

--- a/src/styles/components/_alert.scss
+++ b/src/styles/components/_alert.scss
@@ -6,7 +6,7 @@
   color: white;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: stretch;
 
   > .content {
